2007-11-30  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/set_commands.c: Add a terminating '/' in cd_regex.
				      Never add it in cd_dir.

2007-11-30  Jean-Louis Martineau <martineau@zmanda.com>
	* config/automake/scripts.am: Build of the scripts also depend on
				      $(top_builddir)/config.status

2007-11-30  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amdump.sh: Pass a --startime argument to planner.
	* server-src/planner.c: Get the --starttime command line argument.

2007-11-30  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: New --locale-independent-date-format option.
	* man/xml-source/amstatus.8.xml: Document it.
	* server-src/amflush.c: Output a "starttime-locale-independent" line.
	* server-src/amdump.sh: Output a "starttime-locale-independent" line.

2007-11-30  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/find.c: Remove seen_chunk_of function.

2007-11-28  Jean-Louis Martineau <martineau@zmanda.com>
	* config/macro-archive/docbook-dtd.m4: Check return code of 5.

2007-11-28  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amconfig.pm.in: fix quoting error leading to
	directories named '"'

2007-11-28  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/file.c: only chown new directories when running as root

2007-11-28  Dustin J. Mitchell <dustin@zmanda.com>
	* config/automake/installperms.am: strip directory names from build
	  filenames when setting permissions; fixes errors from examples/
	  install

2007-11-28  Dustin J. Mitchell <dustin@zmanda.com>
	* man/Makefile.am: Allow installs, but not tarballs, without
	  manpages

2007-11-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Check dp->todo before using (est)->dp.

2007-11-27  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/device.c (default_device_start): Overwrite label only
						      if mode == ACCESS_WRITE.

2007-11-20  Ian Turner <ian@zmanda.com>