@@ -1,4 +1,7 @@
 2007-11-30  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/taperscan.c: Fix output formating.
+
+2007-11-30  Jean-Louis Martineau <martineau@zmanda.com>
 	* recover-src/set_commands.c: Add a terminating '/' in cd_regex.
 				      Never add it in cd_dir.
 
